# dotfiles

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  README.md  apply-system.sh  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  machines.sh  rebuild  shell.nix  terminal.nix  theming.nix  update  update-system.sh  upgrade
.github/workflows/: main.yml
apps/: alacritty.nix  browsers.nix  default.nix  development.nix  email_cal_rss.nix  fonts.nix  i3.nix  media.nix  office.nix  qutebrowser.nix  security.nix  services.nix  social.nix  system.nix  themes.nix
apps/custom_config/: ack.nix  default.nix  networkmanager_dmenu.nix  ngrok.nix
apps/custom_config/files/: ngrok.yml
apps/internet/: browsers.nix  chat.nix  default.nix  email.nix  firefox.nix  social.nix
apps/media/: media.nix
apps/office/: office.nix
apps/others/: default.nix  development.nix  media.nix  office.nix  services.nix
apps/programming/: default.nix  editors.nix  langs.nix  scientific.nix  vscode.nix
apps/terminal/: alacritty.nix  bash.nix  default.nix  shell.nix  terminal.nix  terminal_apps.nix  terminal_tools.nix
apps/utilities/: fonts.nix  redshift.nix  services.nix
apps/wm/i3/: default.nix  gtk.nix  i3.nix  packages.nix  picom.nix  polybar.nix
common/: default.nix  nix.nix
common/apps/: default.nix
common/apps/terminal/: shell.nix
common/darwin/homebrew/: default.nix
common/darwin/wm/: default.nix
common/home-manager/: default.nix  development.nix  media.nix  services.nix  system.nix
common/home-manager/alacritty/: default.nix
common/home-manager/bitwarden/: default.nix
common/home-manager/exa/: exa.nix
common/home-manager/flameshot/: default.nix
common/home-manager/gammastep/: default.nix
common/home-manager/git/: default.nix
common/home-manager/helix/: default.nix
common/home-manager/menu/: default.nix
common/home-manager/networkmanager_dmenu/: colors.rasi  default.nix
common/home-manager/newsboat/: default.nix  download_arxiv
common/home-manager/ngrok/: default.nix
common/home-manager/polybar/: bars.ini  config.ini  default.nix  modules.ini  user_modules.ini
common/home-manager/qutebrowser/: default.nix
common/home-manager/rofi/: default.nix
common/home-manager/spotify/: default.nix
common/home-manager/terminal/: shell.nix  starship.nix  terminal_apps.nix
common/home-manager/wm/: default.nix
common/home-manager/zathura/: default.nix
common/nixos/: default.nix
common/nixos/geoclue2/: default.nix
common/nixos/minidlna/: default.nix
common/nixos/samba/: default.nix
common/nixos/tlp/: default.nix
custom_config/: ack.nix  default.nix  networkmanager_dmenu.nix
custom_config/files/: .ackrc
dev-shells/: default.nix
dev-shells/cc/: default.nix
dev-shells/penetration/: bluetooth.nix  code.nix  forensics.nix  fuzzers.nix  generic.nix  hardware.nix  host.nix  malware.nix  misc.nix  packet-generators.nix  penetration.nix  port-scanners.nix  services.nix  terminals.nix  traffic.nix  tunneling.nix  voip.nix  web.nix  windows.nix
dev-shells/python/: default.nix
dev-shells/python-with-pip/: default.nix
files/: .ackrc
hosts/common/apps/: default.nix  office.nix  (+1 more)
hosts/desktop-nixos-wsl/: configuration.nix  default.nix  flake.nix
hosts/eyad-mac/: default.nix
hosts/eyad-nixos/: cli.nix  configuration.nix  default.nix  hardware-configuration.nix  home-manager-tmp.nix  networking.nix  nix.nix  ricing.nix
lib/: default.nix
misc/: .castgetrc  .netrc  giteditor  links.txt  settings.json
modules/darwin/: default.nix  pam.nix
modules/gaming/: default.nix  steam.nix
modules/home-manager/: default.nix  fonts.nix  git.nix  iterm2.nix  preferred-apps.nix  secrets.nix  shellcolor.nix
modules/nixos/: default.nix  diskrsync.nix  gaming.nix  mpd.nix  networkmanager-profiles.nix  radicale.nix  secrets.nix  steam.nix  tt-rss.nix  tv.nix  weechat.nix
old_dotfiles/: i3-relative-resize
overlay/: default.nix  whatsapp.nix
overlay/common/: default.nix
overlay/darwin/: default.nix
overlay/nixos/: default.nix
overlays/: datahub.nix  whatsapp.nix
pkgs/: datahub.nix  default.nix  kepler.nix  toolz.nix
pkgs/fast-rgf/: default.nix
pkgs/flakify/: default.nix
pkgs/kepler/: default.nix
pkgs/libfm/: default.nix
pkgs/linkhandler/: default.nix
pkgs/powermenu/: default.nix  powermenu.sh
pkgs/rgf/: default.nix
pkgs/rofi-files/: files
pkgs/rofi-monitor/: monitor
pkgs/rofi-wifi/: wifi
pkgs/shellcolord/: default.nix
pkgs/sherlock/: default.nix
pkgs/wallpapers/: wallpaper.nix
pkgs/whatismyip/: default.nix
pkgs/whatsie/: default.nix
pkgs/yabai/: default.nix
roles/laptop/: default.nix
secrets/: default.nix  passwords.nix
shells/: cc.nix  db_dev.nix  flake.nix  go.nix  java.nix  ml.nix  ml_no_cuda.nix  mysql.nix  node.nix  penetration.nix  pyproject.toml  python.nix  r.nix  rust.nix  sys-stats.nix
shells/ml/: default.nix  pyproject.toml
shells/penetration/: bluetooth.nix  code.nix  container.nix  dns.nix  forensics.nix  fuzzers.nix  generic.nix  hardware.nix  host.nix  information-gathering.nix  kubernetes.nix  ldap.nix  load-testing.nix  malware.nix  misc.nix  mobile.nix  network.nix  packet-generators.nix  password.nix  penetration.nix  port-scanners.nix  proxies.nix  services.nix  smartcards.nix  terminals.nix  traffic.nix  tunneling.nix  voip.nix  web.nix  windows.nix  wireless.nix
system/: configuration.nix  fonts.nix  hardware-configuration.nix  networking.nix  nix.nix  sound.nix
templates/: default.nix
templates/erlang/: flake.nix
templates/flake/: .editorconfig  .envrc  flake.nix
templates/flake-toml/: flake.nix
templates/go/: flake.nix  go.nix
templates/java/: flake.nix
templates/julia/: flake.nix
templates/ml-python/: .envrc  flake.nix  micromamba-shell.nix  pyproject.toml
templates/ml-python/go/: flake.nix
templates/nodejs/: flake.nix  node.nix
templates/python/: flake.nix  ml_no_cuda.nix  pyproject.toml
templates/python-conda/: .envrc  environment.yml  flake.nix
templates/r/: .envrc  flake.nix
templates/rust/: flake.nix  rust.nix
(+279 files in other folders)
