[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "my-awesome-project"
description = "This is how python package should look like!"
version = "0.1.0"
license = "MIT"

authors = ["Eyad Sibai"]

readme = "README.md"

repository = "https://github.com/wemake-services/my-awesome-project"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
click = ">=8.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
coverage = {extras = ["toml"], version = ">=6.2"}

wemake-python-styleguide = "^0.16"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"

flake8-pytest-style = "^1.6"
doc8 = "^1.0"
nitpick = "^0.32"
black = ">=21.10b0"
isort = ">=5.10.1"
pyupgrade = ">=2.29.1"


safety = "^2.1"

pytest = "^7.1"
pytest-cov = "^3.0"
pytest-randomly = "^3.12"

darglint = ">=1.8.1"

Pygments = ">=2.10.0"
furo = ">=2021.11.12"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}


# Docs, optional, use `poetry install -E docs` to install them:
sphinx = { version = "^5.1",  optional = true }
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = { version = "^1.19", optional = true }
sphinx-click = ">=3.0.2"

m2r2 = { version = "^0.3",  optional = true }
tomlkit = { version = "^0.11", optional = true }


[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "m2r2", "tomlkit"]


[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true


[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.__main__:main"
