[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "ML Project Template"
description = "This is how python package should look like!"
version = "0.1.0"
license = "MIT"

authors = ["Eyad Sibai"]

readme = "README.md"


keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
click = ">=8.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"


m2r2 = { version = "^0.3",  optional = true }
tomlkit = { version = "^0.11", optional = true }


[tool.poetry.extras]
docs = ["m2r2", "tomlkit"]


[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
