[tool.poetry]
name = "Project"
version = "0.0.1"
description = "ML Project Template"
authors = ["Eyad Sibai, Hassen Trigui <<email@mail.com>>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
Changelog = "https://github.com/eyadsibai/invest-trade/releases"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = ">=8.0.1"
pandas = "^1.4.3"
yfinance = "^0.1.74"
matplotlib = "^3.5.3"
pandas-ta = "^0.3.14b0"
pyjanitor = {extras = ["base"], version = "^0.23.1"}
scipy = ">=1.8.0"
scikit-learn = "^1.1.2"
umap-learn = "^0.5.3"
scikit-lego = "^0.6.13"
spacy = "^3.4.1"
mlflow = "^1.28.0"
nltk = "^3.7"
prefect = "^2.3.2"
featuretools = "^1.14.0"
dbt-core = "^1.2.1"
catboost = "^1.0.6"
statsmodels = "^0.13.2"
mlxtend = "^0.20.0"
scikit-plot = "^0.3.7"
category-encoders = "^2.5.0"
shap = "^0.41.0"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
typeguard = ">=2.13.3"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
bandit = "^1.7.4"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
pythonpath = [ ".", "src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
